WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32117
REGRESSION (
r51627
): 3 SVG tests are failing
https://bugs.webkit.org/show_bug.cgi?id=32117
Summary
REGRESSION (r51627): 3 SVG tests are failing
Adam Roben (:aroben)
Reported
2009-12-03 07:35:54 PST
r51627
<
http://trac.webkit.org/changeset/51627
> has caused 3 regression tests to fail (including the test that was added in that revision!). See <
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r51627%20(7825)/results.html
> for the failures.
Attachments
Patch
(9.52 KB, patch)
2009-12-03 11:25 PST
,
Oliver Hunt
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2009-12-03 07:36:36 PST
<
rdar://problem/7440556
>
Oliver Hunt
Comment 2
2009-12-03 11:25:16 PST
Created
attachment 44261
[details]
Patch
mitz
Comment 3
2009-12-03 11:29:37 PST
Comment on
attachment 44261
[details]
Patch r=me modulo typos
WebKit Review Bot
Comment 4
2009-12-03 11:29:39 PST
Attachment 44261
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/svg/SVGListTraits.h:32: More than one command on the same line [whitespace/newline] [4] Total errors found: 1
Oliver Hunt
Comment 5
2009-12-03 11:35:13 PST
Committed
r51649
Adam Roben (:aroben)
Comment 6
2009-12-03 12:38:40 PST
Comment on
attachment 44261
[details]
Patch
> + template<typename ItemPtr> > + struct SVGListTraits<true, ItemPtr*> { > + static ItemPtr nullItem() { return 0; } > + static bool isNull(ItemPtr it) { return !it; } > + };
Shouldn't that be: static ItemPtr* nullItem() { return 0; } static bool isNull(ItemPtr* it) { return !it; }
> + static bool isNull(RefPtr<ItemPtr> it) { return !it; }
This would be more efficient if it took a reference to const.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug