REGRESSION (r51627): 3 SVG tests are failing https://bugs.webkit.org/show_bug.cgi?id=32117

Reviewed by Dan Bernstein.

Null checking Items in the SVGList is insufficient as items may
be floats, etc so add SVGListTraits::isNull and add appropriate
specializations.

Test: svg/dom/svglist-exception-on-out-bounds-error.html

Canonical link: https://commits.webkit.org/43076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51649 268f45cc-cd09-0410-ab3c-d52691b4dbfc